# Application

./: .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml  raw_sql.pgsql  requirements.txt
backend/app/: config.py  main.py  session.py
backend/app/api/v1/: category_controller.py  interviewer_controller.py  video_controller.py
backend/app/crud/: category_repos.py  channels_repos.py  follower.py  interviewer_stats.py  interviewers_repos.py  videos_repos.py
backend/app/models/: response_entity.py
backend/app/utils/: entities.py  youtube_api.py
backend/database/: model.py
frontend/: Dockerfile  README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  main.ts  styles.css
frontend/src/app/: app.config.ts  app.routes.server.ts  app.routes.ts  app.spec.ts  app.ts
frontend/src/app/components/categories-nav/: categories-nav.css  categories-nav.spec.ts  categories-nav.ts
frontend/src/app/components/channel-nav-card/: channel-nav-card.html  channel-nav-card.spec.ts  channel-nav-card.ts
frontend/src/app/components/channel-profil/: channel-profil.html  channel-profil.spec.ts  channel-profil.ts
frontend/src/app/components/features/: features.html  features.spec.ts
frontend/src/app/components/filter/: filter.html  filter.ts
frontend/src/app/components/heros/: hero.html  hero.spec.ts  (+1 more)
frontend/src/app/models/: channel.model.ts  entity.model.ts
frontend/src/app/services/: category-service.ts  channel-service.spec.ts  interviewer-service.spec.ts  interviewer-service.ts  podcast-service.spec.ts  podcast-service.ts
(+39 files in other folders)
